# QwD

./: .gitignore  LICENSE  README.md  benchmark.sh  benchmark_pipeline.json  benchmark_report.md  build.zig  build.zig.zon  build_err.txt  build_manual.sh  compare_metrics.py  context.md  gen10m  generate_definitive_viz.py  generate_development_graph.py  generate_qwd_logo.py  generate_test_fastq.sh  generate_throughput_visual.py  output.json  output.ndjson  pipeline.json  raja_reform.doc  raja_reform_robust_plan.md  temp_bench.zig  test.fastq  validate_matrix.sh  validation_results.csv  verify_gz.zig
benchmarks/: columnar_bench.zig  core_bench.zig  parallel_decomp_bench.zig  parallel_scaling.zig  run_benchmarks.sh  simd_bench.zig
bindings/: README.md  common.zig
bindings/python/: __init__.py  pyproject.toml  qwd.py
bindings/python/qwd.egg-info/: PKG-INFO  SOURCES.txt
docs/: cli_usage.md  native_qwd_engine.md  phase_6.md  phase_p.md  phase_q.md  phase_q5.md  phase_r.md  phase_sec_zero.md  phase_so_cal.md  phase_t.md  phase_taxed.md  phase_u.md  phase_v.md  phase_w.md  phase_x.md  phase_y.md  phase_z.md
examples/: python_qc_example.py  r_qc_example.R
schemas/: bam_stats.schema.json  fastq_qc.schema.json  pipeline.schema.json
scripts/: build_mobile_core.sh  create_repo.sh  gen_small_bgzf.py  gen_test_data.py  generate_stress_data.py  install_zig.sh  simulate_fastq.py  stress_benchmark.sh
tools/: check_abi.c  check_abi.zig  check_v16.zig  debug_gzip.zig  diag_io.zig  diag_report.zig  gen_fastq.zig  gen_fastq_10m.zig  qbgzip.zig  test_deflate.zig  test_reader.zig
(+180 files in other folders)
